<resources>
    <string name="app_name">GreenFridge</string>
    <string name="menu_home">Home</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="remove_bookmark">Remove Bookmark</string>
    <string name="bookmark_recipe">Bookmark Recipe</string>
    <string name="greenfridge">GreenFridge</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register"><u>Register</u></string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_out">Log out</string>
    <string name="rate">Rate this recipe</string>
    <string name="load_comments">Load comments</string>
    <string name="load_more_comments">Load more comments</string>
    <string name="comments">Comments:</string>
    <string name="rate_this_recipe">Rate this recipe</string>
    <string name="enter_your_comment_here">Enter your comment here</string>
    <string name="submit_comment">Submit comment</string>
    <string name="forgot_password"><u>Forgot password</u></string>
    <string name="send_email">Send email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_feedback_here">Enter your feedback here</string>
</resources>